set(PROG_NAME neuvisys-qt)

message("-----------------------------------------------------------------------------------------")
message("\t[APP] Neuvisys - ${PROG_NAME}")
message("-----------------------------------------------------------------------------------------")

#-------------------------------------------------------------------------------
#-------------------------------------------------------------------------------
add_executable(${PROG_NAME} src/main.cpp)
target_link_libraries(${PROG_NAME} PRIVATE network motor_control camera gui)

install(TARGETS ${PROG_NAME} DESTINATION bin)

message("\n\t-- Done.\n%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%")
