set(PROG_NAME neuvisys-exe)

message("-----------------------------------------------------------------------------------------")
message("\t[APP] Neuvisys - ${PROG_NAME}")
message("-----------------------------------------------------------------------------------------")

#-------------------------------------------------------------------------------
#-------------------------------------------------------------------------------
add_executable(${PROG_NAME} src/main.cpp)
target_link_libraries(${PROG_NAME} PRIVATE network)

install(TARGETS ${PROG_NAME} DESTINATION bin)

message("\n\t-- Done.\n%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%")
